[package]
name = "sketches"
version = "0.1.2"
edition = "2024"
autobins = false
description = "Probabilistic data structures for scalable approximate analytics"
license = "MIT"
readme = "README.md"
authors = ["Raja Lehtihet", "Wael El Oraiby"]
repository = "https://github.com/NeoCogi/sketches"

[dependencies]

[[bench]]
name = "tdigest"
harness = false

[[bench]]
name = "space_saving"
harness = false

[[bench]]
name = "kll"
harness = false
